# biological-hsic

./: .gitignore  CITATION.bib  Manifest.toml  Project.toml  README.md  environment.yaml  launch-elzar.sh  lpf.jl  plotting.ipynb  pyproject.toml  reservoir-test.jl  reservoir.jl  train-biohsic.py  train-bp.py  train-hsic.py  train-lif-biohsic.py  train-reservoir.py
configs/: common.yaml  train-bp.yaml  train-hsic.yaml  train-lif-biohsic.yaml  train-reservoir.yaml
configs/data/: cifar10.yaml  fashion_mnist.yaml  linear.yaml  mnist.yaml  xor.yaml
configs/data_model/: cifar10_cnn.yaml  cifar10_mlp.yaml  linear_lif-mlp.yaml  xor_lif-mlp.yaml
configs/logger/: print-logger.yaml  wandb-logger.yaml
configs/model/: cnn.yaml  lif-mlp.yaml  linear.yaml  mlp.yaml
configs/optimizer/: adam.yaml  adamw.yaml  sgd.yaml
configs/schedule/: expdecay.yaml
experiments/: lif-chain-test.jl  lif-dense-test.jl  mnist.jl  reservoir-hsic-test.jl  reservoir-sine-test.jl
experiments/cifar10/: cnn_bp.jl  mlp_bp.jl  mlp_hsic.jl
experiments/extras/: reservoir-mean-test.jl  reservoir-norm-test.jl  reservoir-sine-test.jl
experiments/mnist/: cnn_bp.jl  cnn_hsic.jl  memory_sweep.jl  mlp_bp.jl  mlp_hsic.jl  mnist_phsic.jl
experiments/plotting/: plot_baselines.jl  plot_mnist.jl
experiments/small/: linear.jl  reservoir-hsic.jl  tanh.jl
projectlib/: data.py  hsic.py  logging.py  training.py  utils.py
projectlib/models/: chain.py  layerwise.py  lif.py  (+2 more)
src/: data.jl  experiments.jl  hsic.jl  learning.jl  loops.jl  lpf.jl  networks.jl  reservoir.jl  schedulers.jl  setup.jl  utils.jl
(+489 files in other folders)
