[tool.poetry]
name = "biological-hsic"
version = "0.1.0"
description = ""
authors = ["Kyle Daruwalla <daruwal@cshl.edu>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
ipython = "*"
ipykernel = "*"
jupyter = "*"
nvidia-cudnn-cu12 = "8.9.4.*"
tensorflow = "2.12.*"
tensorflow_datasets = "*"
jax = {version="0.4.*", extras=["cuda12_pip"]}
jaxlib = {version="0.4.*", source="jaxcuda"}
optax = "*"
orbax-checkpoint = "*"
flax = "*"
clu = "*"
hydra-core = "~1.3"
wandb = "*"
matplotlib = "*"
seaborn = "*"

[[tool.poetry.source]]
name = "PyPI"
priority = "default"

[[tool.poetry.source]]
name = "jaxcuda"
url = "https://storage.googleapis.com/jax-releases/jax_cuda_releases.html"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
